<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">


    <Switch
        android:id="@+id/swOrientation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/swOrientation"
        android:textSize="20dp"
        android:layout_marginTop="15dp"/>

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnStart"
        android:layout_marginTop="200dp"
        />

    <Button
        android:id="@+id/btnLastSession"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnLastSession"
        android:layout_marginTop="10dp"
        />

</LinearLayout>