<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/tvCurrSpeed"
        android:layout_marginTop="1dp"
        android:background="@color/black" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/tvCurrRoll"
        android:layout_marginBottom="1dp"
        android:background="@color/black" />

    <TextView
        android:id="@+id/tvAvgSpeed"
        android:layout_width="124dp"
        android:layout_height="35dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="69dp"
        android:gravity="center"
        android:text="@string/defaultTVAvgSpeed"
        android:textSize="13dp" />

    <TextView
        android:id="@+id/tvAverageSpeed"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvAvgSpeed"
        android:layout_alignStart="@+id/tvAvgSpeed"
        android:layout_alignEnd="@+id/tvAvgSpeed"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:textSize="30dp" />
    <!---====================================================-->

    <TextView
        android:id="@+id/tvIstSpeed"
        android:gravity="center"
        android:layout_width="123dp"
        android:layout_height="35dp"
        android:layout_alignTop="@+id/tvAvgSpeed"
        android:layout_marginStart="3dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="5dp"
        android:layout_toStartOf="@+id/tvMxSpeed"
        android:layout_toEndOf="@+id/tvAvgSpeed"
        android:text="@string/defaultTVCurrSpeed"
        android:textSize="13dp" />

    <TextView
        android:id="@+id/tvCurrSpeed"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvIstSpeed"
        android:layout_alignStart="@+id/tvIstSpeed"
        android:layout_alignEnd="@+id/tvIstSpeed"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:textSize="30dp" />
    <!---====================================================-->

    <TextView
        android:id="@+id/tvMxSpeed"
        android:layout_width="123dp"
        android:layout_height="35dp"
        android:layout_alignTop="@+id/tvAvgSpeed"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        android:text="@string/defaultTVMaxSpeed"
        android:textSize="13dp" />

    <TextView
        android:id="@+id/tvMaxSpeed"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvMxSpeed"
        android:layout_alignStart="@+id/tvMxSpeed"
        android:layout_alignEnd="@+id/tvMxSpeed"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:textSize="30dp" />
    <!---=ANGLES=============================================-->

    <TextView
        android:id="@+id/tvLMRoll"
        android:gravity="center"
        android:layout_width="123dp"
        android:layout_height="35dp"
        android:layout_below="@+id/tvAverageSpeed"
        android:layout_alignStart="@+id/tvAvgSpeed"
        android:layout_marginStart="0dp"
        android:layout_marginTop="5dp"
        android:text="@string/defaultTVLeftMaxRoll"
        android:textSize="13dp" />

    <TextView
        android:id="@+id/tvLeftMaxRoll"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvLMRoll"
        android:layout_alignStart="@+id/tvLMRoll"
        android:layout_alignEnd="@+id/tvLMRoll"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:textSize="30dp" />
    <!---====================================================-->

    <TextView
        android:id="@+id/tvCRoll"
        android:gravity="center"
        android:layout_width="123dp"
        android:layout_height="35dp"
        android:layout_alignTop="@+id/tvLMRoll"
        android:layout_marginStart="3dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="5dp"
        android:layout_toStartOf="@+id/tvRMRoll"
        android:layout_toEndOf="@+id/tvLMRoll"
        android:text="@string/defaultTVCurrRoll"
        android:textSize="13dp" />

    <TextView
        android:id="@+id/tvCurrRoll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCRoll"
        android:layout_alignStart="@+id/tvCRoll"
        android:layout_alignEnd="@+id/tvCRoll"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:gravity="center"
        android:textSize="30dp" />
    <!---====================================================-->

    <TextView
        android:id="@+id/tvRMRoll"
        android:layout_width="123dp"
        android:layout_height="35dp"
        android:layout_alignTop="@+id/tvLMRoll"
        android:layout_alignEnd="@+id/tvMxSpeed"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:gravity="center"
        android:text="@string/defaultTVRightMaxTilt"
        android:textSize="13dp" />

    <TextView
        android:id="@+id/tvRightMaxRoll"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvRMRoll"
        android:layout_alignStart="@+id/tvRMRoll"
        android:layout_alignEnd="@+id/tvRMRoll"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:textSize="30dp" />
    <!---=ACCELERATIONS======================================-->

    <TextView
        android:id="@+id/tvX"
        android:gravity="center"
        android:layout_width="123dp"
        android:layout_height="35dp"
        android:layout_below="@+id/tvLeftMaxRoll"
        android:layout_alignStart="@+id/tvLeftMaxRoll"
        android:layout_marginStart="0dp"
        android:layout_marginTop="5dp"
        android:text="@string/defaultTVCurrX"
        android:textSize="13dp" />

    <TextView
        android:id="@+id/tvCurrX"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvX"
        android:layout_alignStart="@+id/tvX"
        android:layout_alignEnd="@+id/tvX"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:gravity="center"
        android:textSize="30dp"/>
    <!---====================================================-->

    <TextView
        android:id="@+id/tvY"
        android:gravity="center"
        android:layout_width="123dp"
        android:layout_height="35dp"
        android:layout_alignTop="@+id/tvX"
        android:layout_marginStart="3dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="5dp"
        android:layout_toStartOf="@+id/tvZ"
        android:layout_toEndOf="@+id/tvX"
        android:text="@string/defaultTVCurrY"
        android:textSize="13dp" />

    <TextView
        android:id="@+id/tvCurrY"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvY"
        android:layout_alignStart="@+id/tvY"
        android:layout_alignEnd="@+id/tvY"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:textSize="30dp" />
    <!---====================================================-->

    <TextView
        android:id="@+id/tvZ"
        android:layout_width="123dp"
        android:layout_height="35dp"
        android:layout_alignTop="@+id/tvX"
        android:layout_alignEnd="@+id/tvMxSpeed"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:gravity="center"
        android:text="@string/defaultTVCurrZ"
        android:textSize="13dp" />

    <TextView
        android:id="@+id/tvCurrZ"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvZ"
        android:layout_alignStart="@+id/tvZ"
        android:layout_alignEnd="@+id/tvZ"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:textSize="30dp" />
    <!---====================================================-->

    <TextView
        android:id="@+id/tvElapsTime"
        android:layout_width="123dp"
        android:layout_height="35dp"
        android:layout_below="@+id/tvCurrY"
        android:layout_marginStart="0dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@+id/tvX"
        android:gravity="center"
        android:text="@string/defaultTVElapsedTime"
        android:textSize="13dp" />

    <TextView
        android:id="@+id/tvElapsedTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvElapsTime"
        android:layout_alignStart="@+id/tvElapsTime"
        android:layout_alignEnd="@+id/tvElapsTime"
        android:layout_marginStart="0dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="0dp"
        android:gravity="center"
        android:textSize="30dp" />
    <!---====================================================-->

    <Button
        android:id="@+id/btnPauseResume"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCurrY"
        android:layout_alignParentStart="true"
        android:layout_marginStart="95dp"
        android:layout_marginTop="136dp"
        android:text="@string/btnPause" />

    <Button
        android:id="@+id/btnStop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/btnPauseResume"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="95dp"
        android:text="@string/btnStop"/>


</RelativeLayout>